--- a/.github/workflows/daily_affirmation.yml
+++ b/.github/workflows/daily_affirmation.yml
@@ -19,6 +19,7 @@ on:
 jobs:
   generate-and-post:
     runs-on: ubuntu-latest
+    timeout-minutes: 30  # Set timeout to 30 minutes
     
     steps:
     - uses: actions/checkout@v3
@@ -28,7 +29,12 @@ jobs:
       with:
         python-version: '3.10'
         
-    - name: Install dependencies
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg
+        
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install moviepy pillow openai boto3 python-dotenv requests
@@ -42,12 +48,20 @@ jobs:
     - name: Download background image
       run: |
         curl -o assets/Iphone_Affirmation_Background.jpg https://raw.githubusercontent.com/ZaccD0099/affirmation_posting/main/assets/Iphone_Affirmation_Background.jpg
+        if [ ! -f "assets/Iphone_Affirmation_Background.jpg" ]; then
+          echo "Failed to download background image"
+          exit 1
+        fi
         
     - name: Download background music
       run: |
         curl -o assets/background_music_ambient.mp3 https://raw.githubusercontent.com/ZaccD0099/affirmation_posting/main/assets/background_music_ambient.mp3
+        if [ ! -f "assets/background_music_ambient.mp3" ]; then
+          echo "Failed to download background music"
+          exit 1
+        fi
         
-    - name: Run affirmation script
+    - name: Run affirmation script with retries
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         FACEBOOK_ACCESS_TOKEN: ${{ secrets.FACEBOOK_ACCESS_TOKEN }}
@@ -55,10 +69,32 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
         AWS_REGION: ${{ secrets.AWS_REGION }}
-      run: python generate_affirmation_video.py
+      run: |
+        max_attempts=3
+        attempt=1
+        while [ $attempt -le $max_attempts ]; do
+          echo "Attempt $attempt of $max_attempts"
+          python generate_affirmation_video.py && break
+          attempt=$((attempt + 1))
+          if [ $attempt -le $max_attempts ]; then
+            echo "Script failed, retrying in 30 seconds..."
+            sleep 30
+          else
+            echo "Script failed after $max_attempts attempts"
+            exit 1
+          fi
+        done
+        
+    - name: Verify video was generated
+      run: |
+        if [ ! -f "output/"*.mp4 ]; then
+          echo "No video file was generated"
+          exit 1
+        fi
       
     - name: Upload generated video
       uses: actions/upload-artifact@v3
       with:
         name: affirmation-video
-        path: output/*.mp4 
+        path: output/*.mp4
+        retention-days: 7  # Keep artifacts for 7 days 
