--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 moviepy==1.0.3
 openai==1.12.0
-python-dotenv==1.0.0
+boto3==1.34.69
 google-auth-oauthlib==1.2.0
 google-auth-httplib2==0.2.0
-google-api-python-client==2.118.0 
+google-api-python-client==2.120.0
+Pillow==10.2.0
+requests==2.31.0
+python-dotenv==1.0.1
+flask==3.0.2 
