--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,8 @@ python-dotenv==1.0.0
 google-auth-oauthlib==1.2.0
 google-auth-httplib2==0.2.0
 google-api-python-client==2.118.0
-scipy==1.12.0 
+scipy==1.12.0
+boto3==1.34.69
+numpy==1.26.4
+Pillow==10.2.0
+requests==2.31.0 
