--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,10 @@ python-dotenv==1.0.0
 boto3==1.34.69
 requests==2.31.0
 psutil==5.9.8
-Pillow==10.2.0 
+Pillow==10.2.0
+scipy==1.12.0
+numpy==1.26.4
+decorator==5.1.1
+imageio==2.33.1
+imageio-ffmpeg==0.4.9
+tqdm==4.66.2 
