--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ psutil==5.9.8
 Pillow==10.2.0
 scipy==1.12.0
 numpy==1.26.4
-decorator==5.1.1
+decorator>=4.0.2,<5.0
 imageio==2.33.1
 imageio-ffmpeg==0.4.9
 tqdm==4.66.2 
