--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,8 @@ numpy==1.26.4
 decorator>=4.0.2,<5.0
 imageio==2.33.1
 imageio-ffmpeg==0.4.9
-tqdm==4.66.2 
+tqdm==4.66.2
+ffmpeg-python==0.2.0
+botocore==1.34.69
+urllib3==2.2.1
+httpx==0.27.0 
